// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux should render corecttly! Box should work properly! 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(Component) />
</ContextProvider>
`;

exports[`redux should render corecttly! DetailsBox should work properly! 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(DetailsBox) />
</ContextProvider>
`;

exports[`redux should render corecttly! checks for html changes in Inbox 1`] = `
<div
  className="team"
>
  <h2>
    Box
  </h2>
  <div
    className="team-info"
  >
    <h3>
      From
    </h3>
  </div>
  <div
    className="team-info"
  >
    <h3>
      Subject
    </h3>
  </div>
</div>
`;

exports[`redux should render corecttly! checks for html changes in Recent 1`] = `
<div
  className="team"
>
  <h2>
    Resently
  </h2>
  <div
    className="team-info"
  >
    <h3>
      From
    </h3>
  </div>
  <div
    className="team-info"
  >
    <h3>
      Subject
    </h3>
  </div>
</div>
`;

exports[`redux should render corecttly! checks for html changes in SearchUser 1`] = `
<form
  className="search"
  onSubmit={[Function]}
>
  <label>
    Seach: 
  </label>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <input
    type="submit"
    value="Search"
  />
</form>
`;

exports[`redux should render corecttly! checks for html changes in Sent 1`] = `
<div
  className="team"
>
  <h2>
    Sent
  </h2>
  <div
    className="team-info"
  >
    <h3>
      To
    </h3>
  </div>
  <div
    className="team-info"
  >
    <h3>
      Subject
    </h3>
  </div>
</div>
`;
